<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>word_square_challenge</groupId>
  <artifactId>word_square_challenge</artifactId>
  <version>0.0.1-SNAPSHOT</version>
  
  <dependencies>
    <dependency> 
      <groupId>org.apache.commons</groupId>
      <artifactId>commons-math3</artifactId>
      <version>3.4.1</version>
    </dependency>
  
  	<dependency>
  	  <groupId>org.junit.jupiter</groupId>
  	  <artifactId>junit-jupiter-api</artifactId>
  	  <version>5.2.0</version>
  	</dependency>
  
  	<dependency>
    	<groupId>org.mockito</groupId>
    	<artifactId>mockito-all</artifactId>
    	<version>1.8.4</version>
	</dependency>
  </dependencies>
  
  <build>
    <sourceDirectory>src</sourceDirectory>
    <resources>
      <resource>
        <directory>src</directory>
        <excludes>
          <exclude>**/*.java</exclude>
        </excludes>
      </resource>
    </resources>
    <plugins>
      <plugin>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.8.1</version>
        <configuration>
          <release>14</release>
          <!-- Allow JUnit to access the test classes -->
    	  <argLine>--add-opens java.base/java.lang=ALL-UNNAMED</argLine>
        </configuration>
      </plugin>
    </plugins>
  </build>
</project>